# example-bazel-rust

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE
src/: BUILD.bazel  main.rs
src/db/: BUILD.bazel  mod.rs
src/http/: BUILD.bazel  client.rs  mod.rs
src/utils/: BUILD.bazel  mod.rs
