[package]
name = "example_bazel_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
uuid = { version = "1.5", features = ["v4", "serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.21"
tokio = { version = "1.35", features = ["full"] }
protobuf = "2.27"
protobuf-codegen = "2.27"
writeable = "0.5"
