[workspace]
members = [
    "src/db",
    "src/http",
    "src/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "example_bazel_rust"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## internal deps 
utils = { path = "src/utils" }
db = { path = "src/db" }
http = { path = "src/http" }