###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "rules_rust_0_40_0",
)

# C++ toolchain (required for Rust linking)
bazel_dep(name = "hermetic_cc_toolchain", version = "2.2.1")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

# Rust rules
bazel_dep(name = "rules_rust", version = "0.40.0")

#########################
# Toolchains
#########################
# C++ toolchain
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

# LLVM toolchain for macOS and Linux
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "darwin-aarch64": "16.0.0",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.77.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

#########################
# Crate Universe (for dependency management)
#########################
# Note: crate_universe setup in bzlmod may require a separate .bzl file
# For now, the toolchains are registered which should resolve the immediate error
# The crate dependencies are already defined in Cargo.Bazel.lock
