load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "db",
    crate_name = "db",
    crate_root = "mod.rs",
    srcs = [
        "mod.rs",
        "record.rs",
        "database.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:chrono",
        "@crates//:serde",
        "@crates//:uuid",
    ],
)
