load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "mod",
    srcs = [
        "mod.rs",
        "response.rs",
        "client.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:reqwest",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)
