load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "http",
    crate_name = "http",
    crate_root = "mod.rs",
    srcs = [
        "mod.rs",
        "response.rs",
        "client.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
